<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_10"
        android:src="@drawable/ic_baseline_arrow_back_black"/>

    <TextView
        android:id="@+id/tv_title_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_30"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/font_24"
        android:text="@string/adviceEntity"
        android:textColor="@color/dark_blue"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/iv_advice_logo"
            android:layout_width="@dimen/scale_120"
            android:layout_height="@dimen/scale_120"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_30"
            android:src="@drawable/ic_advice"/>

        <LinearLayout
            android:layout_width="@dimen/scale_320"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_advice_logo"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_advice_welcome"
                android:textSize="@dimen/font_18"
                android:fontFamily="@font/poppins_bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_advice_intro"
                android:textColorHighlight="@color/yellow"
                android:lineHeight="@dimen/scale_24"/>

            <Button
                android:id="@+id/btn_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/margin_10"
                android:text="@string/get_the_advice"
                android:background="@drawable/border_radius"/>

            <Button
                android:id="@+id/btn_fav_advice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fav_advice"
                android:background="@drawable/border_radius"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>