<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_title_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_30"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/font_24"
        android:text="@string/quiz_result"
        android:textColor="@color/dark_blue"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_praise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/quiz_over"
            android:textAlignment="center"
            android:textSize="@dimen/font_24"
            android:fontFamily="@font/poppins_bold"
            android:background="@color/yellow"
            android:paddingHorizontal="@dimen/padding_10"
            android:paddingTop="@dimen/padding_5"
            android:layout_marginBottom="@dimen/margin_20"/>

        <ImageView
            android:id="@+id/iv_confetti"
            android:layout_width="@dimen/scale_90"
            android:layout_height="@dimen/scale_90"
            android:layout_below="@id/tv_praise"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_15"
            android:src="@drawable/ic_confetti"/>

        <LinearLayout
            android:id="@+id/ll_final_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_confetti"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_final_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_score_label"
                android:textSize="@dimen/font_20"/>

            <TextView
                android:id="@+id/tv_final_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_final_score"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/tv_high_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_high_score_label"
                android:textSize="@dimen/font_20"/>

            <TextView
                android:id="@+id/tv_high_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_20"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_new_high_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_high_score"
            android:layout_centerHorizontal="true"
            android:text="@string/new_high_score"
            android:textSize="@dimen/font_20"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_new_high_score"
            android:layout_centerHorizontal="true">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="@dimen/scale_4"
                app:cardCornerRadius="@dimen/scale_50">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:src="@drawable/ic_baseline_replay"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardElevation="@dimen/scale_4"
                app:cardCornerRadius="@dimen/scale_50">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_5"
                    android:src="@drawable/ic_baseline_exit_to_app"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>