<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginLeft="@dimen/margin_10"
        android:src="@drawable/ic_baseline_arrow_back_black"/>

    <TextView
        android:id="@+id/tv_title_quiz_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_30"
        android:fontFamily="@font/poppins_bold"
        android:textSize="@dimen/font_24"
        android:text="@string/difficulty"
        android:textColor="@color/dark_blue"/>

    <RelativeLayout
        android:layout_width="@dimen/scale_240"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_easy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/scale_12"
            app:cardElevation="@dimen/scale_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="@dimen/padding_10">

                <ImageView
                    android:layout_width="@dimen/scale_60"
                    android:layout_height="@dimen/scale_60"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:src="@drawable/ic_cake_easy"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/easy"
                    android:textSize="@dimen/font_24"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score_label"/>

                    <TextView
                        android:id="@+id/tv_easy_high_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_easy"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/scale_12"
            app:cardElevation="@dimen/scale_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="@dimen/padding_10">

                <ImageView
                    android:layout_width="@dimen/scale_60"
                    android:layout_height="@dimen/scale_60"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:src="@drawable/ic_cake_medium"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textSize="@dimen/font_24"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score_label"/>

                    <TextView
                        android:id="@+id/tv_medium_high_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_hard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_medium"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="@dimen/scale_12"
            app:cardElevation="@dimen/scale_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:paddingVertical="@dimen/padding_10">

                <ImageView
                    android:layout_width="@dimen/scale_60"
                    android:layout_height="@dimen/scale_60"
                    android:layout_marginBottom="@dimen/margin_5"
                    android:src="@drawable/ic_cake_hard"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hard"
                    android:textSize="@dimen/font_24"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_score_label"/>

                    <TextView
                        android:id="@+id/tv_hard_high_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</RelativeLayout>